   - Jifty->handler->apache
   - Jifty->handler->cgi
   Most methods for ->apache and ->cgi are provided by the Compat
   plugin, which is automatically loaded for older jifty apps.  Use
   corresponding header methods of Jifty->web->request and
   Jifty->web->response.

 * Printing to STDOUT deprecated.  Use outs, outs_raw, or
   Jifty->web->response->body() instead.

-----------------------------------
Jifty 0.91117 - November 17th, 2009
-----------------------------------

POSSIBLE INCOMPATABILITIES
==========================
 * Don't call App->start if we're running with no handle (i.e., `jifty schema`)
 * Render PKs as read-only in update actions.  If you do not specify
   which parameters to render for update actions, this will begin
   rendering id as a read-only field.
 * Replace AdminUI's CRUD with Jifty::View::Declare::CRUD.  You may
   need to run something like:

     perl -MFile::ShareDir=dist_dir -e 'print dist_dir("Jifty")' \
      | xargs sudo rm -ir

   ...to make sure the old CRUD is gone so the new CRUD can take its
   place.

CORE FEATURES
=============
 * Page region preloading (see Jifty::Manual::Preload)
 * Optimize magic curent_user intuition a bit
 * Add expired_update/create helper method to session collection.
 * Bump JDBI dep to 0.58 for SetupWizard's available_databases queries
 * Warn about next_page 'url'
 * Add DBI as an explicit dependency
 * Allow underscore in time_zone for set_current_user_time_zone
 * by-pass additional column attributes of models to corresponding
   form fields of model actions.
 * add a "raw_html" option to Jifty::Web::Menu items

CRUD
====
 * Warn about missing object_type
 * Don't pass the update action to display_columns
 * Pass on extra arguments to render_param from CRUD
 * Popout CRUD update forms
 * CRUD: Prefer the column's label to its name when available
 * Make CRUD search a lightbox instead of the horrific splat it is now
 * Use paging for CRUD listings

DOC
===