@@ -2,6 +2,7 @@
 
 use warnings;
 use strict;
+use Plack::Test;
 
 =head1 DESCRIPTION
 
@@ -14,8 +15,17 @@ use Jifty::Test tests => 5;
 like(Jifty->web->url, qr{^http://localhost:\d+/$}, 'basic call works');
 like(Jifty->web->url(path => 'foo/bar'), qr{^http://localhost:\d+/foo/bar$}, 'path works');
 like(Jifty->web->url(path => '/foo/bar'), qr{^http://localhost:\d+/foo/bar$}, 'path with leading slash works');
-  
-$ENV{HTTP_HOST} = 'example.com';
 
-is(Jifty->web->url, 'http://example.com/', 'setting hostname via env works');
-is(Jifty->web->url(path => 'foo/bar'), 'http://example.com/foo/bar', 'hostname via env and path works');
+Jifty::Handler->add_trigger(
+    have_request => sub {
+        is(Jifty->web->url, 'http://example.com/', 'setting hostname via request works');
+        is(Jifty->web->url(path => 'foo/bar'), 'http://example.com/foo/bar', 'hostname via requestand path works');
+    });
+
+test_psgi
+    app => Jifty->handler->psgi_app,
+    client => sub {
+        my $cb = shift;
+        my $req = HTTP::Request->new(GET => "http://example.com/foo/bar");
+        my $res = $cb->($req);
+    };
