@@ -16,7 +16,7 @@ use Test::Base::Filter -Base;
 sub request_from_webform {
     my $form = shift;
     my $r = Jifty::Request->new->from_webform(%$form);
-    delete $r->{$_} for qw(env headers parameters cookies);
+    delete $r->{$_} for qw(env headers parameters cookies scheme);
     return $r;
 }
 
