@@ -16,6 +16,9 @@ INCOMPATABILITIES
  * Printing to STDOUT deprecated.  Use outs, outs_raw, or
    Jifty->web->response->body() instead.
 
+ * munging with the %ENV hash is no longer supported.  Use
+   Jifty->web->request->env instead.
+
 -----------------------------------
 Jifty 0.91117 - November 17th, 2009
 -----------------------------------
